常用JVM配置参数v1.1
Trace跟踪参数、堆的分配参数